<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewIngredientActivity">

    <TextView
        android:id="@+id/nuevoIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/preparacion"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:text="@string/Nuevo_Ingrediente"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/newIngredientEdit"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_below="@id/nuevoIng"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:text="@string/escribir_aqui"
        />

    <Button
        android:id="@+id/addIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/andir" />
</RelativeLayout>